# ChangeLog for dev-python/sphinx
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.97 2012/03/10 13:48:58 jlec Exp $

  10 Mar 2012; Justin Lecher <jlec@gentoo.org> sphinx-0.6.7.ebuild,
  sphinx-1.0.7.ebuild, sphinx-1.1.ebuild, sphinx-1.1.2.ebuild:
  Restrict pypy as dev-python/jinja doesn't support it

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> sphinx-0.6.7.ebuild,
  sphinx-1.0.7.ebuild, sphinx-1.1.2.ebuild, sphinx-1.1.ebuild:
  Fixing SRC_URI for pypi

*sphinx-1.1.2 (16 Dec 2011)

  16 Dec 2011; Patrick Lauer <patrick@gentoo.org> +sphinx-1.1.2.ebuild:
  Bump for #394895

  04 Nov 2011; Markos Chandras <hwoarang@gentoo.org> sphinx-1.0.7.ebuild,
  sphinx-1.1.ebuild:
  Fix dependencies. Simplify ebuilds. Patch by Arfrever.

*sphinx-1.1 (10 Oct 2011)

  10 Oct 2011; Dirkjan Ochtman <djc@gentoo.org> +sphinx-1.1.ebuild:
  Version bump to 1.1.

  04 Apr 2011; Dirkjan Ochtman <djc@gentoo.org> -sphinx-1.0.4.ebuild,
  -sphinx-1.0.5.ebuild, -sphinx-1.0.6.ebuild:
  Remove old versions.

  23 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> sphinx-1.0.7.ebuild:
  ppc64 stable wrt #355275

  27 Feb 2011; Brent Baude <ranger@gentoo.org> sphinx-1.0.7.ebuild:
  stable ppc, bug 355275

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> sphinx-1.0.7.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #355275

  21 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> sphinx-1.0.7.ebuild:
  x86 stable wrt bug #355275

  21 Feb 2011; Jeroen Roovers <jer@gentoo.org> sphinx-1.0.7.ebuild:
  Stable for HPPA (bug #355275).

  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org> sphinx-1.0.7.ebuild:
  Stable on amd64 wrt bug #355275

  21 Jan 2011; Jeroen Roovers <jer@gentoo.org> sphinx-1.0.5.ebuild:
  Stable for HPPA (bug #349138).

*sphinx-1.0.7 (15 Jan 2011)

  15 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +sphinx-1.0.7.ebuild:
  Version bump.
